fixed wrapping issue and added paci links

--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -63,6 +63,7 @@ div.highlighter-rouge pre code, pre code.highlighter-rouge {
 
 blockquote {
   font-style: italic;
+  font-size: 80%;
   border: thin solid black;
   padding: 1em;
 
